<resources>
    <string name="app_name">Attendance</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name :</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="email">E-mail :</string>
    <string name="department">Department :</string>
    <string name="time">Time :</string>
    <string name="reason">Reason :</string>
    <string name="hourofabsence">Hour Of Absence :</string>
    <string name="month">Month :</string>
    <string name="update_role">Update Role</string>

</resources>